--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Documento</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1 class="h">Hola Mundo!!!</h1>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Documento</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="nav">
+        <ul>
+            <li><a href="#">Inicio </a></li>
+            <li><a href="#">Contacto </a></li>
+            <li><a href="#">Sobre mi </a></li>
+        </ul>
+    </div>
+
+    <h1 class="titulo"> Francisco Lonzo</h1>
+    <p>Desarrollador Web</p>
+
+
+    <div class="info">
+
+        <p> Soy estudiante de Analista en sistemas, cursando el último año.</p>
+        <p> Desde mi niñez me apasiono la tecnología y todo el proceso que implica el desarrollo.</p>
+        <p> Actualmente me gustaría trabajar con un equipo del área de sistemas ya sea desarrollando o analizando procesos. </p>
+    </div>
+
+    <div class="tecnologias">
+        <h2>Tecnologias que estoy aprendiendo: </h2>
+            <div class="imgs">
+                <img  src="img/python.png" alt="Python" srcset="">
+                <img src="img/django.png" alt="Django" srcset="">
+                <img src="img/js.png" alt="Html-Css-Javascript" srcset="">
+            </div>
+    </div>
+    <div class="experiencia">
+        <h2>Experiencia laboral</h2>
+            <div class="listado-experiencia">
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+    </div>
+    
+</body>
+</html>
