--- a/index.html
+++ b/index.html
@@ -1,48 +1,131 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="nav">
-        <ul>
-            <li><a href="#">Inicio </a></li>
-            <li><a href="#">Contacto </a></li>
-            <li><a href="#">Sobre mi </a></li>
+
+  <nav class="navbar navbar-expand-lg " style="background-color: rgb(14, 161, 112) ;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">FRANCISCO LONZO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">SOBRE MI</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">CONTACTO</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              PROYECTOS
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Api de productos con DjangoRestFramework</a></li>
+              <li><a class="dropdown-item" href="#">Sistema de gestion para documentacion de vehiculos</a></li>
+              <li><a class="dropdown-item" href="#">Front-end con React para buscar pokemones mediante una api </a></li>
+            </ul>
+          </li>
         </ul>
+
+      </div>
     </div>
+  </nav>
 
-    <h1 class="titulo"> Francisco Lonzo</h1>
-    <p>Desarrollador Web</p>
-
-
-    <div class="info">
-
-        <p> Soy estudiante de Analista en sistemas, cursando el último año.</p>
-        <p> Desde mi niñez me apasiono la tecnología y todo el proceso que implica el desarrollo.</p>
-        <p> Actualmente me gustaría trabajar con un equipo del área de sistemas ya sea desarrollando o analizando procesos. </p>
+  <div class="container-fluid fondo-verde">
+    <h1 class="titulo"> FRANCISCO LONZO </h1>
+    <div class="perfil">
+      <img class="cara" src="img/foto.png" alt="" srcset="">
     </div>
-
-    <div class="tecnologias">
-        <h2>Tecnologias que estoy aprendiendo: </h2>
-            <div class="imgs">
-                <img  src="img/python.png" alt="Python" srcset="">
-                <img src="img/django.png" alt="Django" srcset="">
-                <img src="img/js.png" alt="Html-Css-Javascript" srcset="">
+  </div>
+  <footer class="text-center text-white" style="background-color: rgb(14, 161, 112);">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!-- Section: Images -->
+      <section class="">
+        <div class="row">
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
+              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp" class="w-100" />
+              <a href="#!">
+                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+              </a>
             </div>
-    </div>
-    <div class="experiencia">
-        <h2>Experiencia laboral</h2>
-            <div class="listado-experiencia">
-                <ul>
-                    <li></li>
-                </ul>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
+              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/111.webp" class="w-100" />
+              <a href="#!">
+                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+              </a>
             </div>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
+              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/112.webp" class="w-100" />
+              <a href="#!">
+                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
+              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/114.webp" class="w-100" />
+              <a href="#!">
+                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
+              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/115.webp" class="w-100" />
+              <a href="#!">
+                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
+              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/116.webp" class="w-100" />
+              <a href="#!">
+                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Section: Images -->
     </div>
-    
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+
+</html>
+
+
+<!-- JavaScript Bundle with Popper -->
+
+
 </body>
+
 </html>
