--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             </ul>
           </li>
         </ul>
-
       </div>
     </div>
   </nav>
@@ -55,55 +54,39 @@
       <!-- Section: Images -->
       <section class="">
         <div class="row">
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp" class="w-100" />
+              <img src="/img/django.png" class="w-100"  style="width: 30%;"/>
               <a href="#!">
                 <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
               </a>
             </div>
           </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/111.webp" class="w-100" />
+              <img src="/img/js.png" class="" style="margin-top: 45px; width: 70%;" />
               <a href="#!">
                 <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
               </a>
             </div>
           </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/112.webp" class="w-100" />
+              <img src="/img/python.png" class="w-100" />
               <a href="#!">
                 <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
               </a>
             </div>
           </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/114.webp" class="w-100" />
+              <img src="/img/REACT.png" class="w-100" style="margin-top: 45px;"/>
               <a href="#!">
                 <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
               </a>
             </div>
           </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/115.webp" class="w-100" />
-              <a href="#!">
-                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
-            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/116.webp" class="w-100" />
-              <a href="#!">
-                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
-              </a>
-            </div>
-          </div>
-        </div>
+          
       </section>
       <!-- Section: Images -->
     </div>
