se agregaron imagenes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg " style="background-color: rgb(14, 161, 112) ;">
+  <nav class="navbar navbar-expand-lg " style="background-color: #2B00FF ;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">FRANCISCO LONZO</a>
+      <a class="navbar-brand text-light nombre" href="#">FRANCISCO LONZO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">SOBRE MI</a>
+            <a class="nav-link active text-light" aria-current="page" href="#">SOBRE MI</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CONTACTO</a>
+            <a class="nav-link text-light" href="#">CONTACTO</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               PROYECTOS
             </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Api de productos con DjangoRestFramework</a></li>
-              <li><a class="dropdown-item" href="#">Sistema de gestion para documentacion de vehiculos</a></li>
-              <li><a class="dropdown-item" href="#">Front-end con React para buscar pokemones mediante una api </a></li>
+            <ul class="dropdown-menu bg-primary bg-opacity-75">
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Api de productos con DjangoRestFramework</a></li>
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Sistema de gestion para documentacion de vehiculos</a></li>
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Front-end con React para buscar pokemones mediante una api </a></li>
             </ul>
           </li>
         </ul>
@@ -43,12 +43,12 @@
   </nav>
 
   <div class="container-fluid fondo-verde">
-    <h1 class="titulo"> FRANCISCO LONZO </h1>
+    <h1 class="titulo text-light"> FRANCISCO LONZO </h1>
     <div class="perfil">
       <img class="cara" src="img/foto.png" alt="" srcset="">
     </div>
   </div>
-  <footer class="text-center text-white" style="background-color: rgb(14, 161, 112);">
+  <footer class="text-center text-white" style="background-color: #2B00FF ;">
     <!-- Grid container -->
     <div class="container p-4">
       <!-- Section: Images -->
@@ -58,7 +58,7 @@
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
               <img src="/img/django.png" class="w-100"  style="width: 30%;"/>
               <a href="#!">
-                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+                <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
             </div>
           </div>
@@ -66,7 +66,7 @@
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
               <img src="/img/js.png" class="" style="margin-top: 45px; width: 70%;" />
               <a href="#!">
-                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+                <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
             </div>
           </div>
@@ -74,7 +74,7 @@
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
               <img src="/img/python.png" class="w-100" />
               <a href="#!">
-                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+                <div class="mask" style="background-color:#2B00FF;"></div>
               </a>
             </div>
           </div>
@@ -82,7 +82,7 @@
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
               <img src="/img/REACT.png" class="w-100" style="margin-top: 45px;"/>
               <a href="#!">
-                <div class="mask" style="background-color: rgb(14, 161, 112);"></div>
+                <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
             </div>
           </div>
