--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <img class="cara" src="img/foto.png" alt="" srcset="">
     </div>
   </div>
-  <footer class="text-center text-white" style="background-color: #2B00FF ;">
+  <footer class="text-center text-white footer" style="">
     <!-- Grid container -->
     <div class="container p-4">
       <!-- Section: Images -->
@@ -56,23 +56,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="/img/django.png" class="w-100"  style="width: 30%;"/>
-              <a href="#!">
-                <div class="mask" style="background-color: #2B00FF;"></div>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="/img/js.png" class="" style="margin-top: 45px; width: 70%;" />
-              <a href="#!">
-                <div class="mask" style="background-color: #2B00FF;"></div>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="/img/python.png" class="w-100" />
+              <img src="/img/python.png" class="w-100"  />
               <a href="#!">
                 <div class="mask" style="background-color:#2B00FF;"></div>
               </a>
@@ -80,7 +64,24 @@
           </div>
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="/img/REACT.png" class="w-100" style="margin-top: 45px;"/>
+              <img src="/img/django.png" class="w-100"  style="width: 20%;"/>
+              <a href="#!">
+                <div class="mask" style="background-color: #2B00FF;"></div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
+            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
+              <img src="/img/js.png" class="" style="margin-top: 75px; width: 100%;" />
+              <a href="#!">
+                <div class="mask" style="background-color: #2B00FF;"></div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
+            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
+              <img src="/img/REACT.png" class="w-100" style="margin-top: 25%;"/>
               <a href="#!">
                 <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
@@ -95,7 +96,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      <a class="text-white" href="#">FranciscoLonzo.com</a>
     </div>
     <!-- Copyright -->
   </footer>
@@ -108,7 +109,5 @@
 
 <!-- JavaScript Bundle with Popper -->
 
-
 </body>
-
 </html>
