se agrego iframe form de contacto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg " style="background-color: #2B00FF ;">
     <div class="container-fluid">
-      <a class="navbar-brand text-light nombre" href="#">FRANCISCO LONZO</a>
+      <a class="navbar-brand text-light nombre" href="index.html">FRANCISCO LONZO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">SOBRE MI</a>
+            <a class="nav-link active text-light" aria-current="page" href="index.html">SOBRE MI</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="#">CONTACTO</a>
+            <a class="nav-link text-light" href="contacto.html">CONTACTO</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -48,7 +48,7 @@
       <img class="cara" src="img/foto.png" alt="" srcset="">
     </div>
   </div>
-  <footer class="text-center text-white footer" style="">
+  <footer class="text-center text-white footer" >
     <!-- Grid container -->
     <div class="container p-4">
       <!-- Section: Images -->
