--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
-
 <body>
 
   <nav class="navbar navbar-expand-lg " style="background-color: #2B00FF ;">
@@ -25,12 +23,10 @@
             <a class="nav-link active text-light" aria-current="page" href="#">SOBRE MI</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="/contacto.html">CONTACTO</a>
+            <a class="nav-link text-light" href="contacto.html">CONTACTO</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              PROYECTOS
-            </a>
+            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PROYECTOS</a>
             <ul class="dropdown-menu bg-primary bg-opacity-75">
               <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Api de productos con DjangoRestFramework</a></li>
               <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Sistema de gestion para documentacion de vehiculos</a></li>
