--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Francisco Lonzo</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -56,7 +56,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="/img/python.png" class="w-100"  />
+              <img src="img/python.png" class="w-100"  />
               <a href="#!">
                 <div class="mask" style="background-color:#2B00FF;"></div>
               </a>
@@ -64,7 +64,7 @@
           </div>
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="/img/django.png" class="w-100"  style="width: 20%;"/>
+              <img src="img/django.png" class="w-100"  style="width: 20%;"/>
               <a href="#!">
                 <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
@@ -72,7 +72,7 @@
           </div>
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="/img/js.png" class="" style="margin-top: 75px; width: 100%;" />
+              <img src="img/js.png" class="" style="margin-top: 75px; width: 100%;" />
               <a href="#!">
                 <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
@@ -81,13 +81,12 @@
 
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="/img/REACT.png" class="w-100" style="margin-top: 25%;"/>
+              <img src="img/REACT.png" alt="react" class="w-100" style="margin-top: 25%; "/>
               <a href="#!">
                 <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
             </div>
           </div>
-          
       </section>
       <!-- Section: Images -->
     </div>
