prueba de links

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
             <a class="nav-link text-light" href="contacto.html">CONTACTO</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              PROYECTOS
-            </a>
+            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">PROYECTOS</a>
             <ul class="dropdown-menu bg-primary bg-opacity-75">
               <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Api de productos con DjangoRestFramework</a></li>
               <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Sistema de gestion para documentacion de vehiculos</a></li>
@@ -48,7 +47,7 @@
       <img class="cara" src="img/foto.png" alt="" srcset="">
     </div>
   </div>
-  <footer class="text-center text-white footer" >
+  <footer class="text-center text-white footer">
     <!-- Grid container -->
     <div class="container p-4">
       <!-- Section: Images -->
@@ -56,7 +55,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="img/python.png" class="w-100"  />
+              <img src="img/python.png" class="w-100" />
               <a href="#!">
                 <div class="mask" style="background-color:#2B00FF;"></div>
               </a>
@@ -64,7 +63,7 @@
           </div>
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="img/django.png" class="w-100"  style="width: 20%;"/>
+              <img src="img/django.png" class="w-100" style="width: 20%;" />
               <a href="#!">
                 <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
@@ -81,7 +80,7 @@
 
           <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
             <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="img/REACT.png" alt="react" class="w-100" style="margin-top: 25%; "/>
+              <img src="img/REACT.png" alt="react" class="w-100" style="margin-top: 25%; " />
               <a href="#!">
                 <div class="mask" style="background-color: #2B00FF;"></div>
               </a>
@@ -109,4 +108,5 @@
 <!-- JavaScript Bundle with Popper -->
 
 </body>
+
 </html>
