--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
             <a class="nav-link active text-light" aria-current="page" href="#">SOBRE MI</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="contacto.html">CONTACTO</a>
+            <a class="nav-link text-light" href="contacto.html">CONTACTO.</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PROYECTOS</a>
