--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <a class="nav-link active text-light" aria-current="page" href="index.html">SOBRE MI</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="contacto.html">CONTACTO</a>
+            
+            <a class="nav-link text-light" href="contacto.html">CONTACTO.</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown"
