--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
             <a class="nav-link active text-light" aria-current="page" href="index.html">SOBRE MI</a>
           </li>
           <li class="nav-item">
-            
-            <a class="nav-link text-light" href="contacto.html">CONTACTO.</a>
+
+            <a class="nav-link text-light" href="contacto.html">CONTACTO</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">PROYECTOS</a>
             <ul class="dropdown-menu bg-primary bg-opacity-75">
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Api de productos con DjangoRestFramework</a></li>
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Sistema de gestion para documentacion de vehiculos</a></li>
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Front-end con React para buscar pokemones mediante una api </a></li>
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="">Api de productos con
+                  DjangoRestFramework</a></li>
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="">Sistema de gestion para
+                  documentacion de vehiculos</a></li>
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="">Front-end con React para buscar
+                  pokemones mediante una api </a></li>
             </ul>
           </li>
         </ul>
