--- a/contacto.html
+++ b/contacto.html
@@ -37,30 +37,43 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid">
-  <div class="formulario">
-    <iframe class="w-100 a"
-        src="https://docs.google.com/forms/d/1DLPzi_GVI5CRlZIYpEFkkr6PSdVHwCrhSrjnuH0n8rQ/viewform?edit_requested=true">
-    </iframe>
-</div>
+  <!-- Default form contact -->
+<form class="text-center border border-light p-5" action="#!">
 
-</div>
+  <p class="h4 mb-4">Contact us</p>
+
+  <!-- Name -->
+  <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name">
+
+  <!-- Email -->
+  <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+
+  <!-- Message -->
+  <div class="form-group">
+      <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="Message"></textarea>
+  </div>
+
+  <!-- Send button -->
+  <input class="form-control btn btn-info enviar" type="submit" value="Enviar">
+
+</form>
 
     <!-- Copyright -->
+    <footer class="footer">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
       <a class="text-white" href="#">FranciscoLonzo.com</a>
     </div>
     <!-- Copyright -->
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
-
-</html>
-
-
-<!-- JavaScript Bundle with Popper -->
-
+  
+  
+  <!-- JavaScript Bundle with Popper -->
+  
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+  crossorigin="anonymous"></script>
+
 </html>
