refactorizacion del codigo general

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    
+
   <nav class="navbar navbar-expand-lg " style="background-color: #2B00FF ;">
     <div class="container-fluid">
       <a class="navbar-brand text-light nombre" href="index.html">FRANCISCO LONZO</a>
@@ -52,64 +52,17 @@
     </div>
   </div>
   <footer class="text-center text-white footer">
-    <!-- Grid container -->
-    <div class="container p-4">
-      <!-- Section: Images -->
-      <section class="">
-        <div class="row">
-          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="img/python.png" class="w-100" />
-              <a href="#!">
-                <div class="mask" style="background-color:#2B00FF;"></div>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="img/django.png" class="w-100" style="width: 20%;" />
-              <a href="#!">
-                <div class="mask" style="background-color: #2B00FF;"></div>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="img/js.png" class="" style="margin-top: 75px; width: 100%;" />
-              <a href="#!">
-                <div class="mask" style="background-color: #2B00FF;"></div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
-            <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
-              <img src="img/REACT.png" alt="react" class="w-100" style="margin-top: 25%; " />
-              <a href="#!">
-                <div class="mask" style="background-color: #2B00FF;"></div>
-              </a>
-            </div>
-          </div>
-      </section>
-      <!-- Section: Images -->
+    <div class="text-center   text-light p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright:<a class="text-white" href="#">FranciscoLonzo.com</a>
     </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
-      <a class="text-white" href="#">FranciscoLonzo.com</a>
-    </div>
-    <!-- Copyright -->
   </footer>
+  
+  
+  
+  <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
-
-</html>
-
-
-<!-- JavaScript Bundle with Popper -->
 
 </body>
 
