--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+
 <body>
 
   <nav class="navbar navbar-expand-lg " style="background-color: #2B00FF ;">
@@ -26,11 +28,15 @@
             <a class="nav-link text-light" href="contacto.html">CONTACTO</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PROYECTOS</a>
+            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">PROYECTOS</a>
             <ul class="dropdown-menu bg-primary bg-opacity-75">
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Api de productos con DjangoRestFramework</a></li>
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Sistema de gestion para documentacion de vehiculos</a></li>
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Front-end con React para buscar pokemones mediante una api </a></li>
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Api de productos con
+                  DjangoRestFramework</a></li>
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Sistema de gestion para
+                  documentacion de vehiculos</a></li>
+              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="#">Front-end con React para buscar
+                  pokemones mediante una api </a></li>
             </ul>
           </li>
         </ul>
@@ -38,42 +44,41 @@
     </div>
   </nav>
   <!-- Default form contact -->
-<form class="text-center border border-light p-5" action="#!">
+  <form class="text-center border border-light p-5" action="#!">
 
-  <p class="h4 mb-4">Contact us</p>
+    <p class="h4 mb-4">Contactame</p>
+    <div class="form-group">
 
-  <!-- Name -->
-  <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Name">
+      <!-- Name -->
+      <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Nombre">
 
-  <!-- Email -->
-  <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
+      <!-- Email -->
+      <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
 
 
-  <!-- Message -->
-  <div class="form-group">
-      <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="Message"></textarea>
-  </div>
+      <!-- Message -->
+      <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="5" placeholder="Mensaje"></textarea>
 
-  <!-- Send button -->
-  <input class="form-control btn btn-info enviar" type="submit" value="Enviar">
+      <!-- Send button -->
+      <input class="form-control btn btn-info enviar mt-4 p-2" type="submit" value="Enviar">
+    </div>
 
-</form>
+  </form>
 
-    <!-- Copyright -->
-    <footer class="footer">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <!-- Copyright -->
+  <footer class="footer">
+    <div class="text-center p-3 text-light" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
       <a class="text-white" href="#">FranciscoLonzo.com</a>
     </div>
     <!-- Copyright -->
   </footer>
-  
-  
+
+
   <!-- JavaScript Bundle with Popper -->
-  
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-  crossorigin="anonymous"></script>
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </html>
