--- a/index.html
+++ b/index.html
@@ -45,12 +45,23 @@
     </div>
   </nav>
 
-  <div class="container-fluid fondo-verde">
-    <h1 class="titulo text-light"> FRANCISCO LONZO </h1>
-    <div class="perfil">
-      <img class="cara" src="img/foto.png" alt="" srcset="">
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-light text-center mt-5 ">Hola soy..</h1><br>
+      <h2 id="maquina" class="titulo text-light text-center col-12">Francisco Lonzo </h2>
     </div>
+
+
   </div>
+</div>
+
+<div class="container text-center">
+  <img class="" src="img/foto.png" alt="" srcset="">
+</div>
+
+
   <footer class="text-center text-white footer">
     <div class="text-center   text-light p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:<a class="text-white" href="#">FranciscoLonzo.com</a>
@@ -63,6 +74,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
 
 </body>
 
