se modifico la imagen de inicio

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
   </div>
 </div>
 
-<div class="container text-center">
-  <img class="" src="img/foto.png" alt="" srcset="">
+<div class="row">
+  <div class="col-lg-12 text-center">
+      <img class="img-circle foto " src="img/foto.png" />
+  </div>
 </div>
 
 
