se modifico el fondo y algunas letras

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg " style="background-color: #2B00FF ;">
+  <nav class="navbar navbar-expand-lg letras-efecto" style="background-color: #2b00ff8c ;">
     <div class="container-fluid">
       <a class="navbar-brand text-light nombre" href="index.html">FRANCISCO LONZO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -49,19 +49,17 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1 class="text-light text-center mt-5 ">Hola soy..</h1><br>
-      <h2 id="maquina" class="titulo text-light text-center col-12">Francisco Lonzo </h2>
+      <h1 class=" letras-efecto text-light text-center mt-5 ">Hola soy..</h1><br>
+      <h2 id="maquina" class=" letras-efecto titulo  text-center col-12">Francisco Lonzo </h2>
     </div>
 
 
   </div>
 </div>
 
-<div class="row">
-  <div class="col-lg-12 text-center">
+  <div class="text-center">
       <img class="img-circle foto " src="img/foto.png" />
   </div>
-</div>
 
 
   <footer class="text-center text-white footer">
