se agrego img de fondo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg letras-efecto" style="background-color: #2b00ff8c ;">
+  <nav class="navbar navbar-light navbar-expand-lg letras-efecto" style="background-color: #2b00ff8c ;">
     <div class="container-fluid">
       <a class="navbar-brand text-light nombre" href="index.html">FRANCISCO LONZO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
