se agrego mediaquery a la img

--- a/index.html
+++ b/index.html
@@ -46,35 +46,40 @@
   </nav>
 
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h1 class=" letras-efecto text-light text-center mt-5 ">Hola soy..</h1><br>
-      <h2 id="maquina" class=" letras-efecto titulo  text-center col-12">Francisco Lonzo </h2>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1 class=" letras-efecto text-light text-center mt-5 ">Hola soy..</h1><br>
+        <h2 id="maquina" class=" letras-efecto titulo  text-center col-12">Francisco Lonzo </h2>
+      </div>
+
+
     </div>
-
-
-  </div>
-</div>
-
-  <div class="text-center">
-      <img class="img-circle foto " src="img/foto.png" />
   </div>
 
+  <div class="container">
+    <div class="row">
+     <div class="col-12">
+       <div class="text-center">
+        <img class="img-circle foto " src="img/foto.png" />
+      </div>
+     </div>
+    </div>
+  </div>
 
   <footer class="text-center text-white footer">
     <div class="text-center   text-light p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:<a class="text-white" href="#">FranciscoLonzo.com</a>
     </div>
   </footer>
-  
-  
-  
+
+
+
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 
