creacion de proyectos.html y about-me.html

--- a/index.html
+++ b/index.html
@@ -22,24 +22,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="index.html">SOBRE MI</a>
+            <a class="nav-link active text-light" aria-current="page" href="about-me.html">SOBRE MI</a>
           </li>
           <li class="nav-item">
-
             <a class="nav-link text-light" href="contacto.html">CONTACTO</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">PROYECTOS</a>
-            <ul class="dropdown-menu bg-primary bg-opacity-75">
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="">Api de productos con
-                  DjangoRestFramework</a></li>
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="">Sistema de gestion para
-                  documentacion de vehiculos</a></li>
-              <li><a class="dropdown-item bg-primary bg-opacity-75 text-light" href="">Front-end con React para buscar
-                  pokemones mediante una api </a></li>
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="proyectos.html">PROYECTOS</a>
           </li>
+
         </ul>
       </div>
     </div>
@@ -52,14 +43,12 @@
         <h1 class=" letras-efecto text-light text-center mt-5 ">Hola soy..</h1><br>
         <h2 id="maquina" class=" letras-efecto titulo  text-center col-12">Francisco Lonzo </h2>
       </div>
-
-
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-     <div class="col-12">
+     <div class="col">
        <div class="text-center">
         <img class="img-circle foto " src="img/foto.png" />
       </div>
