--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contacto</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -46,7 +47,16 @@
     </div>
     <!-- Copyright -->
   </footer>
-
+  
+    <div class=" abs-center">
+      <div class="col-12 text-center">
+        <h1 class="text-light letras-efecto">Contacto</h1>
+        <a class=" verde boton-wsp" href="https://api.whatsapp.com/send/?phone=%2B542352409689&text&type=phone_number&app_absent=0">
+          <i class="fa fa-whatsapp verde" aria-hidden="true"></i>  Enviar Whatsapp
+        </a>
+      </div>
+  
+  </div>
 
   <!-- JavaScript Bundle with Popper -->
 
