--- a/about-me.html
+++ b/about-me.html
@@ -36,8 +36,51 @@
     </div>
   </nav>
   <!-- Default form contact -->
-
-
+<div class="abs-center">
+  <div class="container">
+    <h1 class="text-white text-center letras-efecto">Sobre mi</h1>
+    <div class="card">
+      <div class="card-body">
+        <p class="card-text">- Soy estudiante de Analista en sistemas, cursando el último año.</p>
+        <p class="card-text">- Desde siempre me apasiono la tecnología y el aprendizaje continuo.</p>
+        <p class="card-text">- Actualmente me gustaría trabajar con un equipo del área de sistemas para seguir creciendo como profesional.</p>
+      </div>
+    </div>
+    <br>
+    <div class="card">
+      <div class="card-header">Experiencia Laboral</div>
+      <div class="card-body">
+        <h5 class="card-title">GUIGIVAN S.R.L</h5>
+        <img src="img/guigivan.jpg" width="4%" alt="">
+        <p class="card-text">Responsable de TI</p>
+        <p class="card-text info">Jornada completa feb. 2022 - actualidad 
+          - Desarrollo de sistemas con Django <br>
+          - Administración de Windows server <br>
+          - Soporte técnico (HelpDesk)<br>
+          - Gestion de redes<br>
+          - Instalacion de VPN<br>
+          - Mantenimiento de hardware<br> </p>
+              <h5 class="card-title">Soluciones Informaticas FL</h5>
+              <img src="img/solucionesfl.jpg" width="4%" alt="">
+              <p class="card-text"></p>
+              <p class="card-text info">Emprendimiento propio<br>
+                - Reparación y mantenimiento de pc<br>
+                - Soporte tecnico remoto<br>
+                - Instalacion de componentes<br>
+                - Instalacion de redes<br>
+                - Configuracion de Router, Switch, etc<br>
+      </div>
+    </div>
+    <br>
+    <div class="card">
+      <div class="card-header">Featured</div>
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
+  </div>
+</div>
   <!-- Copyright -->
   <footer class="footer">
     <div class="text-center p-3 text-light" style="background-color: rgba(0, 0, 0, 0.2);">
