--- a/about-me.html
+++ b/about-me.html
@@ -52,7 +52,7 @@
       <div class="card-body">
         <h5 class="card-title">GUIGIVAN S.R.L</h5>
         <img src="img/guigivan.jpg" width="4%" alt="">
-        <p class="card-text">Responsable de TI</p>
+        <p class="card-text"><strong>Responsable de TI</strong></p>
         <p class="card-text info">Jornada completa feb. 2022 - actualidad 
           - Desarrollo de sistemas con Django <br>
           - Administración de Windows server <br>
@@ -60,15 +60,15 @@
           - Gestion de redes<br>
           - Instalacion de VPN<br>
           - Mantenimiento de hardware<br> </p>
-              <h5 class="card-title">Soluciones Informaticas FL</h5>
-              <img src="img/solucionesfl.jpg" width="4%" alt="">
-              <p class="card-text"></p>
-              <p class="card-text info">Emprendimiento propio<br>
-                - Reparación y mantenimiento de pc<br>
-                - Soporte tecnico remoto<br>
-                - Instalacion de componentes<br>
-                - Instalacion de redes<br>
-                - Configuracion de Router, Switch, etc<br>
+        <h5 class="card-title">Soluciones Informaticas FL</h5>
+        <img src="img/solucionesfl.jpg" width="4%" alt="">
+        <p class="card-text"></p>
+        <p class="card-text info"><strong>Emprendimiento propio</strong><br>
+          - Reparación y mantenimiento de pc<br>
+          - Soporte tecnico remoto<br>
+          - Instalacion de componentes<br>
+          - Instalacion de redes<br>
+          - Configuracion de Router, Switch, etc<br>
       </div>
     </div>
     <br>
@@ -82,13 +82,13 @@
   </div>
 </div>
   <!-- Copyright -->
-  <footer class="footer">
+  <div class="footer-about-me">
     <div class="text-center p-3 text-light" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
       <a class="text-white" href="#">FranciscoLonzo.com</a>
     </div>
     <!-- Copyright -->
-  </footer>
+  </div>
 
 
   <!-- JavaScript Bundle with Popper -->
