--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <nav class="navbar navbar-light navbar-expand-lg letras-efecto" style="background-color: #2b00ff8c ;">
+  <nav class="navbar navbar-light navbar-expand-lg nav-fondo letras-efecto" style="background-color: #2b00ff8c ;">
     <div class="container-fluid">
       <a class="navbar-brand text-light nombre" href="index.html">FRANCISCO LONZO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -37,26 +37,26 @@
     </div>
   </nav>
   <!-- Default form contact -->
+  <div class="abs-center ">
+    <div class="col-12 text-center">
+      <h1 class="text-light letras-efecto">Enviame un mensaje!</h1>
+      <a class="verde" href="https://api.whatsapp.com/send/?phone=%2B542352409689&text&type=phone_number&app_absent=0">
+        <i class="fa fa-whatsapp " aria-hidden="true"></i> 
+      </a>
+    </div>
+
+</div>
 
 
   <!-- Copyright -->
-  <footer class="footer">
+  <footer class="footer-fondo">
     <div class="text-center p-3 text-light" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
       <a class="text-white" href="#">FranciscoLonzo.com</a>
     </div>
     <!-- Copyright -->
-  </footer>
+  </footer >
   
-    <div class="abs-center">
-      <div class="col-12 text-center">
-        <h1 class="text-light letras-efecto">Enviame un mensaje!</h1>
-        <a class="verde" href="https://api.whatsapp.com/send/?phone=%2B542352409689&text&type=phone_number&app_absent=0">
-          <i class="fa fa-whatsapp " aria-hidden="true"></i> 
-        </a>
-      </div>
-  
-  </div>
 
   <!-- JavaScript Bundle with Popper -->
 
