--- a/proyectos.html
+++ b/proyectos.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <nav class="navbar navbar-light navbar-expand-lg letras-efecto" style="background-color: #2b00ff8c ;">
+  <nav class="navbar navbar-light navbar-expand-lg letras-efecto nav-fondo" style="background-color: #2b00ff8c ;">
     <div class="container-fluid">
       <a class="navbar-brand text-light nombre" href="index.html">FRANCISCO LONZO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -79,7 +79,7 @@
 
 
   <!-- Copyright -->
-  <footer class="footer">
+  <footer class="footer-fondo">
     <div class="text-center p-3 text-light" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
       <a class="text-white" href="#">FranciscoLonzo.com</a>
