--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <nav class="navbar navbar-light navbar-expand-lg letras-efecto" style="background-color: #2b00ff8c ;">
+  <nav class="navbar navbar-light navbar-expand-lg letras-efecto nav-fondo" >
     <div class="container-fluid">
       <a class="navbar-brand text-light nombre" href="index.html">FRANCISCO LONZO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-  <footer class="text-center text-white footer">
+  <footer class="text-center text-white footer-fondo">
     <div class="text-center   text-light p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:<a class="text-white" href="#">FranciscoLonzo.com</a>
     </div>
