--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="col">
         <h1 class=" letras-efecto text-light text-center mt-5 ">Hola soy..</h1><br>
-        <h2 id="maquina" class=" letras-efecto titulo  text-center col-12">Francisco Lonzo </h2>
+        <h2 id="maquina" class=" titulo  text-center col-12">Francisco Lonzo </h2>
       </div>
     </div>
   </div>
