--- a/proyectos.html
+++ b/proyectos.html
@@ -41,9 +41,9 @@
 
       <div class="container abs-center">
         <div class="row">
-          <div class="col-lg-4 ">
-            <div class="card" s>
-              <img class="card-img-top zoom" src="/img/guigivan.png" alt="Card image cap">
+          <div class="col-lg-6 ">
+            <div class="card" >
+              <img class="card-img-top zoom" src="/img/guigivan.png"  height="280px" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Guigivan ABM</h5>
                 <p class="card-text">Aplicacion desarrollada con el fin de organizar documentacion e informacion de los vehiculos de la empresa</p>
@@ -58,34 +58,17 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 ">
-            <div class="card" s>
-              <img class="card-img-top zoom" src="/img/guigivan.png" alt="Card image cap">
+          <div class="col-lg-6">
+            <div class="card">
+              <img class="card-img-top zoom" src="/img/react.jpg" height="300px" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Guigivan ABM</h5>
-                <p class="card-text">Aplicacion desarrollada con el fin de organizar documentacion e informacion de los vehiculos de la empresa</p>
-                <p class="card-text">Tecnologias usadas: <img src="/img/python.svg" alt="python" height="30px">
-                  <img src="/img/django.svg" alt="django" height="30px">
+                <h5 class="card-title">Busqueda en la API de pokemon.com</h5>
+                <p class="card-text">Aplicacion creada con Reacy para hacer peticiones a la API de pokemon</p>
+                <p class="card-text">Tecnologias usadas: 
                   <img src="/img/html.svg" alt="html" height="30px">
                   <img src="/img/css.svg" alt="css" height="30px">
-                  <img src="/img/sql.svg" alt="sql" height="30px">
-                
-                </p>
+                  <img src="/img/react.svg" alt="css" height="30px">
 
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 ">
-            <div class="card" s>
-              <img class="card-img-top zoom" src="/img/guigivan.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Guigivan ABM</h5>
-                <p class="card-text">Aplicacion desarrollada con el fin de organizar documentacion e informacion de los vehiculos de la empresa</p>
-                <p class="card-text">Tecnologias usadas: <img src="/img/python.svg" alt="python" height="30px">
-                  <img src="/img/django.svg" alt="django" height="30px">
-                  <img src="/img/html.svg" alt="html" height="30px">
-                  <img src="/img/css.svg" alt="css" height="30px">
-                  <img src="/img/sql.svg" alt="sql" height="30px">
                 
                 </p>
 
