--- a/proyectos.html
+++ b/proyectos.html
@@ -43,7 +43,7 @@
         <div class="row">
           <div class="col-lg-6 ">
             <div class="card" >
-              <img class="card-img-top zoom" src="/img/guigivan.png"  height="280px" alt="Card image cap">
+              <img class="card-img-top zoom" src="/img/guigivan.png"   alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Guigivan ABM</h5>
                 <p class="card-text">Aplicacion desarrollada con el fin de organizar documentacion e informacion de los vehiculos de la empresa</p>
@@ -52,18 +52,16 @@
                   <img src="/img/html.svg" alt="html" height="30px">
                   <img src="/img/css.svg" alt="css" height="30px">
                   <img src="/img/sql.svg" alt="sql" height="30px">
-                
                 </p>
-
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <di v class="col-lg-6">
             <div class="card">
-              <img class="card-img-top zoom" src="/img/react.jpg" height="300px" alt="Card image cap">
+              <img class="card-img-top zoom" src="/img/react.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Busqueda en la API de pokemon.com</h5>
-                <p class="card-text">Aplicacion creada con Reacy para hacer peticiones a la API de pokemon</p>
+                <p class="card-text">Aplicacion creada con Reacy para hacer peticiones a la API de pokemon</p><br>
                 <p class="card-text">Tecnologias usadas: 
                   <img src="/img/html.svg" alt="html" height="30px">
                   <img src="/img/css.svg" alt="css" height="30px">
