--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,8 @@
   <div class="abs-center ">
     <div class="col-12 text-center">
       <h1 class="text-light letras-efecto">Enviame un mensaje!</h1>
-      <a class="verde" href="https://api.whatsapp.com/send/?phone=%2B54235240968ia-hidden="true"></i> 
+      <a class="verde" href="https://api.whatsapp.com/send/?phone=%2B542352409689&text&type=phone_number&app_absent=0">
+        <i class="fa fa-whatsapp " aria-hidden="true"></i> 
       </a>
     </div>
 
