--- a/proyectos.html
+++ b/proyectos.html
@@ -41,13 +41,13 @@
 
       <div class="container abs-center">
         <div class="row">
-          <div class="col-lg-6 ">
-            <div class="card" >
+          <div class="col-lg-6">
+            <div class="card card-container" >
               <img class="card-img-top zoom" src="/img/guigivan.png"   alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Guigivan ABM</h5>
                 <p class="card-text">Aplicacion desarrollada con el fin de organizar documentacion e informacion de los vehiculos de la empresa</p>
-                <p class="card-text">Tecnologias usadas: <img src="/img/python.svg" alt="python" height="30px">
+                <p class="card-text">Tecnologias usadas: <img src="/img/python.png" alt="python" height="30px">
                   <img src="/img/django.svg" alt="django" height="30px">
                   <img src="/img/html.svg" alt="html" height="30px">
                   <img src="/img/css.svg" alt="css" height="30px">
@@ -56,31 +56,22 @@
               </div>
             </div>
           </div>
-          <di v class="col-lg-6">
-            <div class="card">
+          <div class="col-lg-6 ">
+            <div class="card card-container">
               <img class="card-img-top zoom" src="/img/react.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Busqueda en la API de pokemon.com</h5>
-                <p class="card-text">Aplicacion creada con Reacy para hacer peticiones a la API de pokemon</p><br>
+                <p class="card-text">Aplicacion creada con React para hacer peticiones a la API de pokemon</p><br>
                 <p class="card-text">Tecnologias usadas: 
                   <img src="/img/html.svg" alt="html" height="30px">
                   <img src="/img/css.svg" alt="css" height="30px">
                   <img src="/img/react.svg" alt="css" height="30px">
-
-                
                 </p>
-
               </div>
             </div>
           </div>
         </div>
       </div>
-
-
-
-
-
-
   <!-- Copyright -->
   <footer class="footer-fondo">
     <div class="text-center p-3 text-light" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -96,5 +87,4 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-
 </html>
