--- a/about-me.html
+++ b/about-me.html
@@ -54,7 +54,7 @@
         <img src="img/guigivan.jpg" width="4%" alt="">
         <p class="card-text"><strong>Responsable de TI</strong></p>
         <p class="card-text info">Jornada completa feb. 2022 - actualidad 
-          - Desarrollo de sistemas con Django <br>
+          - RESPONSABLE DE TI <br>
           - Administración de Windows server <br>
           - Soporte técnico (HelpDesk)<br>
           - Gestion de redes<br>
